# Lloyds_Reporting_Dev

./: .gitignore  CHANGELOG_V2.md  CLAUDE.md  DETAILED_DOCUMENTATION.md  FORMS_INVENTORY.md  GAP_REMEDIATION_ACTION_PLAN.md  IMPLEMENTATION_ROADMAP.md  LLOYDS_REPORTING_SUMMARY.md  POWERBI_GUIDE.md  POWER_BI_GUIDE.md  POWER_BI_INTEGRATION_GUIDE.md  POWER_BI_VISUALIZATION_GUIDE.md  QUICKSTART.md  README.md  README_Solvency_II_AAD.md  REPORT_INVENTORY_TABLE.md  RRQ_RRA_USAGE_GUIDE.md  RRQ_vs_RRA_COMPARISON.md  SAO_SYNTHETIC_DATA_README.md  SOLVENCY_II_ASB_README.md  SYNTHETIC_DATA_README.md  lloyds_forms_urls.csv  powerbi_python_example.py  powerbi_r_example.R  pyproject.toml  requirements.txt
FSCS_PowerBI/: README.md
Files_for_Claude/: 2025 SCR New SBF no LCR Template.xlsx  ClaudeCode_Reporting_pre26_v01.docx  FSCS data - template for completion 2.xlsx  Liquidity Stress Test Template_December 2024.xlsx  Lloyds_Reporting_MockUp_ETL_01.knwf  RRA-specs.xlsx  RRQ-specs.xlsx  Risk-code-mapping-and-descriptions-04062025.xlsx  SAO Addendum Return 2025.xlsx  Solvency II Pillar 3 - AAD Return Specifications Annual 2024.xlsx  Solvency II Pillar 3 - ASB Return Specifications Annual 2024.xlsx  Solvency II Pillar 3 - ASR Return Specifications Annual 2024 2.xlsx  Solvency II Pillar 3 - QSR Return Specifications Q3 2025.xlsx  Solvency II Pillar 3 - Risk and Claim Reporting - Step B claims template.xlsx  Solvency II Pillar 3 - Risk and Claim Reporting - Step B premium template.xlsx
OTH/: __init__.py  oth_internal_model.py  oth_special_templates.py
POWER_BI/: README.md  __init__.py  aad_reports_powerbi.py  asr_annual_solvency_powerbi.py  bordereaux_powerbi.py  fscs_data_powerbi.py  lcm_lsm_capital_models_powerbi.py  lcr_capital_return_powerbi.py  liquidity_stress_powerbi.py  pmdr_monthly_performance_powerbi.py  powerbi_python_Lloyds_Reporting_Dev_FSCS_Data.py  powerbi_python_Lloyds_Reporting_Dev_Liquidity_Stress_Test.py  powerbi_python_Lloyds_Reporting_Dev_RRA_Forms_Data.py  powerbi_python_Lloyds_Reporting_Dev_Solvency_II_ASB_Returns.py  powerbi_python_Lloyds_Reporting_Dev_Solvency_II_Claims_Processing.py  powerbi_python_Lloyds_Reporting_Dev_Solvency_II_QSR_Reporting.py  qad_quarterly_asset_data_powerbi.py  qad_quarterly_assets_powerbi.py  qma_quarterly_monitoring_powerbi.py  qmb_performance_monitoring_powerbi.py  qmb_quarterly_monitoring_b_powerbi.py  rds_disaster_scenarios_powerbi.py  rra_aggregator_powerbi.py  rra_forms_powerbi.py  sao_actuarial_opinion_powerbi.py  sao_addendum_powerbi.py  sbf_business_forecast_powerbi.py  sfcr_disclosure_powerbi.py  solvency_asb_powerbi.py  solvency_claims_powerbi.py  solvency_qsr_powerbi.py  srs_reinsurance_structure_powerbi.py  territory_returns_powerbi.py
Python_Scripts/: README.md  generate_lloyds_synthetic_data.py  powerbi_lloyds_data.py
QRTs/: __init__.py  qrt_balance_sheet.py  qrt_group.py  qrt_premiums_claims.py  qrt_technical_provisions.py
R_Scripts/: README.md  generate_lloyds_synthetic_data.R  powerbi_lloyds_data.R
Solvency_II_AAD_Python/: README.md  powerbi_aad230_transformer.py  powerbi_aad233_transformer.py  powerbi_aad235_transformer.py  powerbi_aad236_transformer.py  powerbi_aad237_transformer.py  powerbi_aad238_transformer.py  synthetic_data_generator.py
Solvency_II_AAD_R/: README.md  powerbi_aad230_transformer.R  powerbi_all_aad_transformers.R  synthetic_data_generator.R
Solvency_II_ASB_Python/: README.md  __init__.py  export_to_excel.py  powerbi_asb_returns.py  synthetic_data_generator.py
Solvency_II_ASB_R/: README.md  export_to_excel.R  powerbi_asb_returns.R  synthetic_data_generator.R
Solvency_II_QSR_Reporting/: .gitignore  QSR_vs_AAD_vs_ASB.md  README.md
data/: README.md  all_syndicates_assets.csv  all_syndicates_cashflow.csv  all_syndicates_metadata.csv  all_syndicates_stress.csv  generate_synthetic_data.py
integrations/: README.md  __init__.py
lloyds_reporting/: config.py
python_implementation/: POWERBI_INTEGRATION.md  README.md  __init__.py  all_syndicates_analysis.xlsx  liquidity_stress_test.py  syndicate_2001_analysis.xlsx
python_scripts/: __init__.py  requirements.txt  rra_premium_processing.py  solvency_claims_processor.py
r_implementation/: POWERBI_INTEGRATION.md  README.md
r_scripts/: install_packages.R  rra_premium_processing.R  solvency_claims_processor.R
raw_data/: README.md  _metadata.json  asset_holdings.csv  claim_transactions.csv  exchange_rates.csv  policies.csv  premium_transactions.csv  reserve_movements.csv  risk_exposures.csv  syndicates.csv
sao_addendum_python/: README.md  __init__.py  generate_090_specific_ibnr.py  generate_100_movements_ave.py  generate_sao_class_mappings.py
sao_addendum_r/: README.md  generate_090_specific_ibnr.R  generate_100_movements_ave.R  generate_sao_class_mappings.R
synthetic_data/: generate_synthetic_data.py  rra_010_control.csv  rra_091_lpt.csv  (+16 more)
(+343 files in other folders)
