[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lloyds-reporting"
version = "1.2.0"
description = "Lloyd's of London regulatory reporting toolkit with Python + R implementations"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.7"
authors = [
    {name = "Lloyd's Development Team"}
]
keywords = [
    "lloyds",
    "insurance",
    "regulatory",
    "reporting",
    "solvency-ii",
    "rra",
    "rrq",
    "qsr",
    "asb",
    "fscs",
    "actuarial",
    "power-bi"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Core dependencies
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.23.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
]

[project.optional-dependencies]
# Visualization dependencies
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

# Statistical analysis
stats = [
    "scipy>=1.9.0",
    "statsmodels>=0.13.0",
]

# Database connectivity
db = [
    "sqlalchemy>=1.4.0",
    "pyodbc>=4.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "pylint>=2.15.0",
    "mypy>=1.0.0",
    "isort>=5.10.0",
    "pre-commit>=3.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

# All optional dependencies
all = [
    "lloyds-reporting[viz,stats,db,dev,docs]",
]

[project.urls]
"Homepage" = "https://github.com/jp3141github/Lloyds_Reporting_Dev"
"Bug Tracker" = "https://github.com/jp3141github/Lloyds_Reporting_Dev/issues"
"Documentation" = "https://github.com/jp3141github/Lloyds_Reporting_Dev#readme"

[project.scripts]
# CLI entry points (can be added later)
# lloyds-report = "lloyds_reporting.cli:main"

[tool.setuptools]
packages = [
    "python_scripts",
    "python_scripts.forms",
    "python_scripts.utils",
    "python_scripts.data_generation",
    "QRTs",
    "OTH",
    "POWER_BI",
    "Solvency_II_ASB_Python",
    "Solvency_II_QSR_Reporting.Python",
    "FSCS_PowerBI.Python",
    "python_implementation",
    "sao_addendum_python",
]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.xlsx", "*.json", "*.md"]

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | r_scripts
  | R_Scripts
  | r_implementation
  | Solvency_II_ASB_R
  | Solvency_II_QSR_Reporting/R
  | FSCS_PowerBI/R
  | sao_addendum_r
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [
    ".git",
    ".venv",
    "venv",
    "r_scripts",
    "R_Scripts",
]

[tool.pylint.main]
ignore = [
    "r_scripts",
    "R_Scripts",
    "r_implementation",
    "Solvency_II_ASB_R",
]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "r_scripts",
    "R_Scripts",
    "r_implementation",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["python_scripts", "QRTs", "OTH", "POWER_BI"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/r_scripts/*",
    "*/R_Scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
